Design changes. Header controller design fix

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
       <footer class="w3-container w3-theme-d3 ">
       </footer>
       <footer class="w3-container w3-theme-d5">
-        <span class="">Copy Right Protected<a href="#" target="_blank"></a></span>
+        <span class=""><i class="fas fa-copyright"></i> Copyright 2020 Telecharge - All Rights Reserved.<a href="#" target="_blank"></a></span>
       </footer>
     </div>
   </div>
