design changes - header added to few screens.

--- a/src/index.html
+++ b/src/index.html
@@ -58,15 +58,6 @@
   <div id="header">
 
     <head>
-      <!-- <script>
-        // Date picker only
-        $('#datepicker').datetimepicker({
-          format: 'DD-MM-YYYY'
-        });
-      </script> -->
-      
-      <!-- <base href="/ui/"> -->
-
       <base href="/">
     </head>
   </div>
@@ -74,13 +65,8 @@
 
     <body class="w3-theme-l5 body-grad">
       <!-- Navbar -->
-
       <app-root></app-root>
-
-
-
       <!-- Footer -->
-
       <script>
         // Accordion
         function myFunction(id) {
@@ -105,15 +91,11 @@
           }
         }
       </script>
-
-
     </body>
   </div>
 
   <div class="footer body-grad">
-    <div class="">
-      <footer class="w3-container w3-theme-d3 ">
-      </footer>
+    <div>
       <footer class="w3-container w3-theme-d5">
         <span class=""><i class="fas fa-copyright"></i> Copyright 2020 Telecharge - All Rights Reserved.<a href="#" target="_blank"></a></span>
       </footer>
